--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="keywords" content="reviews, games, game reviews">
 <meta name="author" content="Liam Mowry and Trace Arnold">
 <meta name="description" content="Your non-biased game review site!">
-<title>Home - NO Games</title>
+<title>Home - N.O. Games</title>
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="icon.gif">
 </head>
