--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
 <head>
-  <meta name="google-site-verification" content="WFjR_jyB0DSVaqv_E-jq71QFceUXSWN3uAVv0UTse9A" />
 <meta name="keywords" content="reviews, games, game reviews">
 <meta name="author" content="Liam Mowry and Trace Arnold">
 <meta name="description" content="Your non-biased game review site!">
-<title>Home - N.O. Games</title>
+<title>Home - GNG</title>
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="icon.gif">
 </head>
