--- a/reviews/smb1.html
+++ b/reviews/smb1.html
@@ -3,7 +3,7 @@
 <meta name="keywords" content="reviews, games, game reviews">
 <meta name="author" content="Liam Mowry and Trace Arnold">
 <meta name="description" content="Your non-biased game review site!">
-<title>Super Mario Bros. - N.O. Games</title>
+<title>Super Mario Bros. - GNG</title>
 <link rel="stylesheet" href="../style.css">
 <link rel="icon" href="../icon.gif">
 </head>
